examples/invalid/10_function_equals_body.lane
module Examples.Invalid10
// invalid: functions use block bodies, not equals-sign expression bodies
pub fn add(a : Int, b : Int) -> Int = a + b
